# cpp_project

./: CMakeLists.txt  README.md
include/: calculator_math.h
src/: calculator_math.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
